--- a/2_layout/8_grid_system_order/index.html
+++ b/2_layout/8_grid_system_order/index.html
@@ -11,19 +11,18 @@
 </head>
 
 <body>
+    <!--ORDENAR A POSIÇÃO DE ACORDO COM A RESOLUÇÃO ESCOLHIDA-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                sm-8
-            </div>
-            <div class="col-sm-4">
-                sm-4
-            </div>
+            <div class="col order-sm-3">Primeira Exibição</div>
+            <div class="col order-sm-2">Segunda Exibição</div>
+            <div class="col order-sm-1">Terceira Exibição</div>
         </div>
         <div class="row">
-            <div class="col">auto</div>
-            <div class="col-sm-5">sm-5</div>
-            <div class="col">auto</div>
+            <div class="col order-md-4">primeira</div>
+            <div class="col order-md-3">segunda</div>
+            <div class="col order-md-2">terceira</div>
+            <div class="col order-md-1">quarta</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
