--- a/2_layout/9_grid_system_offset/index.html
+++ b/2_layout/9_grid_system_offset/index.html
@@ -11,19 +11,21 @@
 </head>
 
 <body>
+    <!--offset div fantasma-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-8">
-                sm-8
-            </div>
-            <div class="col-sm-4">
-                sm-4
-            </div>
+            <div class="col-sm-4">div a</div>
+            <div class="col-sm-4 offset-sm-4">div c</div>
         </div>
         <div class="row">
-            <div class="col">auto</div>
-            <div class="col-sm-5">sm-5</div>
-            <div class="col">auto</div>
+            <div class="col-lg-4">div a</div>
+            <div class="col-lg-6 offset-lg-2">div c</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">div a</div>
+            <div class="col-md-2 offset-md-2">div c</div>
+            <div class="col-md-2">div d</div>
+            <div class="col-md-2 offset-md-2">div f</div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
